# solaxx3

./: .gitignore  .pylintrc  LICENSE  README.md  example.py  get_solax_local.py  pyproject.toml  read_solax_inverter_params.py  test.py
.github/workflows/: python-package.yml
database/: collect_stats.py  data_source_db.py  mysql_data_source.py  read_and_save.py  schema.sql  utils.py
grafana/: solax_dashboard.json
old/: a.py  c.py  r.py  registers.py  rem_read_solax_inverter_params.py
solax-x3/: registers.py
solaxx3/: pyproject.toml  rs485.py
solaxx3/old/: rs485.py
src/solaxx3/: __init__.py  registers.py  rs485.py  solax_registers_info.py  solaxx3.py  utils.py
tests/: final_result.py  test_mysql_connector.py  test_register_data.py  test_solaxx3.py
tests/mock_packages/mysql/: connection.py  connector.py  cursor.py  cursor_config.json  error.py
tests/mock_packages/pymodbus/: client.py  registers_output.py  utils.py
