[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "solaxx3"
version = "1.0.4"
description = "Read Solax X3 inverter registers via modbus interface (RS-485)"
readme = "README.md"
authors = [
    { name = "Flavius Moldovan", email = "mkfam@protonmail.com" },
    { name = "Philip Moldovan", email = "phdfam@protonmail.com" },
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["Solax", "solax-x3", "solaxx3", "solar inverter", "RTU", "MODBUS"]
dependencies = [
    "pymodbus[serial] >= 3.0.0,<3.10.0",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/mkfam7/solaxx3"
Issues = "https://github.com/mkfam7/solaxx3/issues"
