# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solax-x3"
version = "0.0.6"
description = "Read Solax X3 inverter registers via modbus interface"
readme = "README.md"
authors = [{ name = "Flavius Moldovan", email = "mkfam@protonmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Solax", "solar inverter", "RTU", "MODBUS"]
dependencies = [
    "pymodbus",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/mkfam7/solax-x3"
